--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,14 @@
-name: libphonenumber
+name: libphonenumber2
 description: This is a Flutter implementation of libphonenumber. It includes only a few features at the moment, and are added when more functionality is desired.
-version: 1.0.2
+version: 2.0.2
 homepage: https://github.com/emostar/flutter-libphonenumber
+environment:
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  meta: ^1.2.3
+  meta: ^1.3.0
 
 flutter:
   plugin:
@@ -17,6 +19,3 @@ flutter:
       ios:
         pluginClass: LibphonenumberPlugin
 
-environment:
-  sdk: ">=1.19.0 <3.0.0"
-  flutter: ">=1.12.0 <2.0.0"
