--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ version: 2.0.2
 homepage: https://github.com/emostar/flutter-libphonenumber
 environment:
   sdk: ">=2.12.0 <3.0.0"
-
+  flutter: '^1.10.0'
 dependencies:
   flutter:
     sdk: flutter
