--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,10 +6,11 @@ environment:
   sdk: '>=2.12.0 <3.0.0'
   flutter: ^1.10.0
 dependencies: 
-  meta: ^1.3.0
-  flutter: 
+  flutter:
     sdk: flutter
-flutter: 
+dev_dependencies:
+  pedantic: ^1.11.0
+flutter:
   plugin: 
     platforms: 
       android: 
